Changed out duplicate copy on services and contact pages

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 17 2021 06:10:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 17 2021 12:53:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -74,7 +74,7 @@ drift.load('r73nxaxiv89c');
   <div class="contact_page_section wf-section">
     <div class="main_container">
       <h1 class="section_h1">Contact Us</h1>
-      <p class="solo_para">You can connect with us in a variety of ways that include email, phone, text or web form below. While we&#x27;re not magicians, we can guarantee our kind approach coupled with our years of expertise and knowledge will help you achieve balance in your journey to wellness. Feel free to reach out with questions or if you would like additional information about a particular treatment offered. We enjoy nothing more than to see our patients feeling better and returning to their normal lives and activities. </p>
+      <p class="solo_para">We&#x27;re here for you. Whether you contact us in person, by phone or email - we want to be your partner on this journey towards wellness and can promise that our kind approach coupled with years of expertise will get you on the right path. Reach out if there is any additional information desired, questions to be asked, to schedule a consultation or anything else - we enjoy nothing more than seeing people feeling better!</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
           <div class="w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="34.1523293,-118.3410588" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-enable-scroll="true" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip="Ryu Acupuncture Clinic, Inc"></div>
