--- a/services.html
+++ b/services.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 17 2021 06:10:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 17 2021 12:53:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Services | Ryu Acupuncture Clinic</title>
-  <meta content="We offer a wide variety of services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." name="description">
-  <meta content="Services  | Ryu Acupuncture Clinic" property="og:title">
-  <meta content="We offer a wide variety of services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." property="og:description">
-  <meta content="Services  | Ryu Acupuncture Clinic" property="twitter:title">
-  <meta content="We offer a wide variety of services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." property="twitter:description">
+  <title>Traditional Chinese Medicine Services | Ryu Acupuncture Clinic</title>
+  <meta content="We offer a wide variety of traditional Chinese medicine services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." name="description">
+  <meta content="Traditional Chinese Medicine Services  | Ryu Acupuncture Clinic" property="og:title">
+  <meta content="We offer a wide variety of traditional Chinese medicine services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." property="og:description">
+  <meta content="Traditional Chinese Medicine Services  | Ryu Acupuncture Clinic" property="twitter:title">
+  <meta content="We offer a wide variety of traditional Chinese medicine services to help you on your journey to wellness. This includes acupuncture, herbal medicine, cupping, moxa, nutrition and more." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -73,8 +73,8 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="services_intro_section wf-section">
     <div class="main_container">
-      <h1 class="section_h1">Our Services</h1>
-      <p class="solo_para">We offer a wide range of holistic preventative and rehabilitative services. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proven effective for a wide array of chronic conditions. Fortunately, it is becoming more mainstream in the West. During your initial visit, we will work together to determine the cause of your condition through an evaluation of symptoms, behaviors and lifestyle. Additional examination such as history, look, feel, taste, smell and your ultimately your pulse will help guide the course of your treatment.</p>
+      <h1 class="section_h1">Our Traditional Chinese Medicine Services</h1>
+      <p class="solo_para">Traditional Chinese medicine offers a wide range of preventative and rehabilitative services. The ancient tradition has been used to treat disease for over 2,500 years across the Asian continent as well as being proven effective in treating chronic conditions such as heart problems or depression among others that can be helped by its holistic approach which includes an evaluation upon symptoms, behavior patterns and lifestyle habits found through examination with additional checking out things like history-taking abilities along side taste/smell perception before determining how best we should proceed ahead based on these findings!</p>
     </div>
   </div>
   <div class="services_options_section wf-section">
