Removed some animations to improve page speed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 17 2021 12:53:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 07:10:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -57,7 +57,7 @@ drift.load('r73nxaxiv89c');
       </video>
       <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic</h1>
       <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
-      <a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
+      <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -86,19 +86,19 @@ drift.load('r73nxaxiv89c');
       <div class="block_text_pre_h2">ABOUT US</div>
       <h2 class="section_h2">Why we&#x27;re the best acupuncture Burbank has to offer</h2>
       <div class="_4_block_row">
-        <div class="_4_block_center"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="A blue outline of a resume with several bullet points of achievement and a ribbon of accolade." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/experienced_acupuncturists.png" loading="lazy" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="A blue outline of a resume with several bullet points of achievement and a ribbon of accolade." class="eastern_medicine_icons">
           <h3 class="icon_h3">Over 20+ Years Experience</h3>
           <p class="icon_para">Years of training and education at prestigious schools, residencies and clinical experience have accumulated to best in class care and treatment.</p>
         </div>
-        <div class="_4_block_center"><img src="images/top_rated_professionals.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="ad9224af-31de-81b9-ad67-f7fab77d4898" alt="A blue outline of an acupuncturist with 5 stars below him, indicating he is top rated." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/top_rated_professionals.png" loading="lazy" alt="A blue outline of an acupuncturist with 5 stars below him, indicating he is top rated." class="eastern_medicine_icons">
           <h3 class="icon_h3">5-Star Rated Acupuncturists</h3>
           <p class="icon_para">With a multitude of five-star reviews, we have the reputation and backing you deserve to add balance, harmony and wellness back to your daily life.</p>
         </div>
-        <div class="_4_block_center"><img src="images/world_class_quality.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="0e48cd1c-115e-0a82-c8d1-fb48af5c798e" alt="A blue outline of a hand holding a shield with a checkmark in it." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/world_class_quality.png" loading="lazy" alt="A blue outline of a hand holding a shield with a checkmark in it." class="eastern_medicine_icons">
           <h3 class="icon_h3">World Class Quality &amp; Service</h3>
           <p class="icon_para">Our exceptional bedside manner and attention to the details are second to none. We go the extra mile to ensure you have a wonderful visit in our care.</p>
         </div>
-        <div class="_4_block_center"><img src="images/personalized_care.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="fe2696db-ef17-1778-54a8-3f897ff67ad4" alt="A blue outline of a body sitting in a meditation position, an acupuncture needle and certain points along the spine for treatment." class="eastern_medicine_icons">
+        <div class="_4_block_center"><img src="images/personalized_care.png" loading="lazy" alt="A blue outline of a body sitting in a meditation position, an acupuncture needle and certain points along the spine for treatment." class="eastern_medicine_icons">
           <h3 class="icon_h3">Personalized Care</h3>
           <p class="icon_para">From check in to check out, your visit will be tailor-made around your body. No cookie cutter or one-size fits all approach here, just pure 1:1 service.</p>
         </div>
@@ -131,21 +131,21 @@ drift.load('r73nxaxiv89c');
           </div>
           <div class="featured_number_wrapper">
             <div class="circle_wrapper">
-              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f742" style="opacity:0" class="circle_div">
+              <div class="circle_div">
                 <h4 class="counter">112</h4>
                 <div class="circle_titles">5 Star Reviews</div>
               </div>
             </div>
             <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="A blue dotted arrow pointing to the right." class="arrow_image_left"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="A blue dotted arrow pointing down." class="arrow_image_left_mobile"></div>
             <div class="circle_wrapper">
-              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f74b" style="opacity:0" class="circle_div">
+              <div class="circle_div">
                 <h4 class="counter">14,299</h4>
                 <div class="circle_titles">Repeat Visits</div>
               </div>
             </div>
             <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="A blue dotted arrow pointing to the right." class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="A blue dotted arrow pointing down." class="arrow_image_right_mobile"></div>
             <div class="circle_wrapper">
-              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f754" style="opacity:0" class="circle_div">
+              <div class="circle_div">
                 <h4 class="counter">6</h4>
                 <div class="circle_titles">Awards</div>
               </div>
@@ -155,7 +155,7 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="_2_block_row">
         <div class="_2_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="34c46542-9256-1bd6-539b-712ff6414399" alt="The Bank of the West building in Burbank, where Ryu Acupuncture Clinic is located">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="The Bank of the West building in Burbank, where Ryu Acupuncture Clinic is located">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -213,7 +213,7 @@ drift.load('r73nxaxiv89c');
         </div>
       </div>
       <div class="_5_block_row">
-        <div data-w-id="5633b154-1e02-d1dc-e61c-3862799b0a0d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_left">
+        <div class="_5_block_left">
           <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_family.jpg" loading="lazy" alt="Dr. Jay Ryu with a happy family" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
@@ -231,7 +231,7 @@ drift.load('r73nxaxiv89c');
 }</script>
           </a>
         </div>
-        <div data-w-id="6d4c4f45-25e0-28e9-7ddd-291ea3e23c37" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+        <div class="_5_block">
           <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_child.jpg" loading="lazy" alt="Dr. Jay Ryu with a pleased mother and child." class="gallery_image_2">
             <script type="application/json" class="w-json">{
   "items": [
@@ -249,7 +249,7 @@ drift.load('r73nxaxiv89c');
 }</script>
           </a>
         </div>
-        <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+        <div class="_5_block">
           <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 991px) 18vw, (max-width: 1439px) 16vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image_3">
             <script type="application/json" class="w-json">{
   "items": [
@@ -267,7 +267,7 @@ drift.load('r73nxaxiv89c');
 }</script>
           </a>
         </div>
-        <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
+        <div class="_5_block">
           <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 18vw, 112.5px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image_4">
             <script type="application/json" class="w-json">{
   "items": [
@@ -285,7 +285,7 @@ drift.load('r73nxaxiv89c');
 }</script>
           </a>
         </div>
-        <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
+        <div class="_5_block_right">
           <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 18vw, 112.5px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image_5">
             <script type="application/json" class="w-json">{
   "items": [
