--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 07:10:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 08:43:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -249,10 +249,10 @@ drift.load('r73nxaxiv89c');
         <div class="testimonial_date">02/24/2018</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
-      <div class="testimonial_block mix yelp _2018"><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
+      <div class="testimonial_block mix yelp _2018">
         <p class="testimonial_para">&quot;Dr Ryu is a miracle worker. I&#x27;ve had tinnitus for a solid year and I&#x27;ve done what one is supposed to do: see an ENT, get an MRI, take a lot of vitamins, and after minimal improvement, I thought I would be stuck with the ringing in my ears for life. As I write this, I have zero tinnitus and full hearing!<br><br>I was recommended to acupuncture for a stiff shoulder/neck by my GP and after a few sessions for Dr Ryu and getting full mobility back in my neck, I casually asked Dr Ryu if he could do something about my ears. He said it was difficult to treat, but I stuck with it for a month before getting sudden relief. I will continue to go back because there is no greater gift than the gift of silence.&quot;</p><img src="images/emily_S.jpg" loading="lazy" alt="Profile picture of Emily S." class="testimonial_image">
         <div class="testimonial_author">Emily S.</div>
-        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_location">Los Angeles, CA</div><img src="images/yelp_5_star.PNG" loading="lazy" alt="Five red stars laid out in the same format as Yelp&#x27;s review system." class="_5_star_full">
         <div class="testimonial_date">02/06/2018</div>
         <div class="testimonial_source">Review from Yelp</div>
       </div>
