--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 07:10:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 08:43:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -55,8 +55,8 @@ drift.load('r73nxaxiv89c');
         <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
         <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
       </video>
-      <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic</h1>
-      <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
+      <h1 class="ryu_title">Ryu Acupuncture Clinic</h1>
+      <h2 class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
       <a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
   </div>
@@ -109,12 +109,12 @@ drift.load('r73nxaxiv89c');
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
           <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. We screen all patients and verify with temperature checks. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand sanitizer in the reception area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. This is just one of the reasons we&#x27;re the best acupuncture Burbank has to offer.</p>
         </div>
-        <div data-w-id="bcd27994-ddcf-2e98-a30f-12638afa79cd" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
+        <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="360 degree view of Ryu Acupuncture"></iframe></div>
         </div>
       </div>
       <div class="_2_block_row_reverse">
-        <div data-w-id="058240cb-5cb0-a0b3-8ec6-6bc7cefed0ad" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
+        <div class="_360_frame_block">
           <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 991px) 28vw, (max-width: 1439px) 43vw, 580px" srcset="images/woman_happy_with_results-p-1080.jpeg 1080w, images/woman_happy_with_results-p-1600.jpeg 1600w, images/woman_happy_with_results.jpg 1920w" alt="A woman rejoicing after feeling better from treatment." class="image-2"></a>
         </div>
         <div class="_2_block">
@@ -318,21 +318,21 @@ drift.load('r73nxaxiv89c');
       <div class="cards_grid">
         <a href="acupuncture.html" class="service_card_link w-inline-block">
           <div class="card_block">
-            <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="A close up shot of a hand placing needles into a patient&#x27;s back." class="cards_img"></div>
+            <div class="crads_img_mask"><img src="images/needles_close_up.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="A close up shot of a hand placing needles into a patient&#x27;s back." class="cards_img"></div>
             <h3 class="card_h3">Acupuncture</h3>
             <p class="cards_para">Acupuncture is the insertion of very thin needles through your skin at specific points of the body. A staple of traditional Chinese medicine, acupuncture is most commonly used to treat pain and stress.</p>
           </div>
         </a>
         <a href="traditional-chinese-herbs.html" class="service_card_link w-inline-block">
           <div class="card_block">
-            <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291f05" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" alt="A wide-variety of herbs scattered into a beautiful arrangement." class="cards_img"></div>
+            <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" alt="A wide-variety of herbs scattered into a beautiful arrangement." class="cards_img"></div>
             <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
             <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Chinese herbal medicine uses herbs to improve overall health, while combatting a wide-variety of conditions and ailments. This approach helps to balance the body by treating patient patterns.</p>
           </div>
         </a>
         <a href="cupping.html" class="service_card_link w-inline-block">
           <div class="card_block">
-            <div class="crads_img_mask"><img src="images/cupping.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291efe" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" alt="Cupping being performed on a patient&#x27;s back." class="cards_img"></div>
+            <div class="crads_img_mask"><img src="images/cupping.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" alt="Cupping being performed on a patient&#x27;s back." class="cards_img"></div>
             <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
             <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Cupping is a form of alternative therapy originating in China. It involves placing cups on the skin to form suction that may help facilitate healing with the increased blood flow to the area of treatment.</p>
           </div>
@@ -340,17 +340,17 @@ drift.load('r73nxaxiv89c');
       </div>
       <div class="cards_grid">
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f0e-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/auriculotherapy.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f10" alt="Ear seeds being administered to a patient&#x27;s ear." class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/auriculotherapy.jpg" alt="Ear seeds being administered to a patient&#x27;s ear." class="cards_img"></div>
           <h3 class="card_h3">Auriculotherapy</h3>
           <p class="cards_para">Ear acupuncture, or auriculotherapy, is a form of medicine based on the notion that the ear is a micro system that reflects the body. The auricle, or outer portion of the ear, is where treatment is performed.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/hand_moxa.png" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f17" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa-p-500.png 500w, images/hand_moxa-p-800.png 800w, images/hand_moxa.png 900w" alt="A hand holding moxa coals." class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/hand_moxa.png" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa-p-500.png 500w, images/hand_moxa-p-800.png 800w, images/hand_moxa.png 900w" alt="A hand holding moxa coals." class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
           <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">A traditional Chinese medicine, Moxibustion is a therapy that consists of burning dried mugwort on particular points of the body. This is often used as a treatment for a wide-range variety of conditions.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1c-bfb09bd8" class="card">
-          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f1e" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" alt="A man under an infrared lamp receiving treatment, with two areas indicated with red highlights to show where he is experiencing pain." class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" alt="A man under an infrared lamp receiving treatment, with two areas indicated with red highlights to show where he is experiencing pain." class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
           <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f21-bfb09bd8" class="cards_para">Also called thermotherapy, heat therapy is the use of heat to treat pain and improve overall health. This is often beneficial to patients with ailments such as arthritis, stiff muscles or deep tissue injuries.</p>
         </div>
@@ -364,7 +364,7 @@ drift.load('r73nxaxiv89c');
   <div class="parallax_section wf-section">
     <div class="parallax_block_cupping"></div>
   </div>
-  <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section wf-section">
+  <div class="testimonials_section wf-section">
     <div class="horizontal_wrapper">
       <div class="block_text_pre_h2">OUR TESTIMONIALS</div>
       <h2 class="section_h2">What our patients are saying</h2>
@@ -544,11 +544,11 @@ drift.load('r73nxaxiv89c');
       <p class="solo_para">You can connect with us in a variety of ways that include email, phone, text or web form below. While we&#x27;re not magicians, we can guarantee our kind approach coupled with our years of expertise and knowledge will help you achieve balance in your journey to wellness. Feel free to reach out with questions or if you would like additional information about a particular treatment offered. We enjoy nothing more than to see our patients feeling better and returning to their normal lives and activities. </p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
-          <div class="w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="34.1523293,-118.3410588" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-enable-scroll="true" data-w-id="080dd785-70e0-d772-cecb-2c7f581d3070" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip="Ryu Acupuncture Clinic, Inc"></div>
+          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-enable-scroll="true" data-enable-touch="true" data-widget-style="roadmap" data-widget-zoom="12" class="w-widget w-widget-map"></div>
         </div>
         <div class="_2_block margin_left">
           <div class="w-form">
-            <form id="wf-form-Website-Inquiry---Homepage-Form" name="wf-form-Website-Inquiry---Homepage-Form" data-name="Website Inquiry - Homepage Form" method="get" data-w-id="14a3b0c7-539a-5e94-7777-7ebdf3a887e3" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email-2">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="field" class="w-input"></textarea>
+            <form id="wf-form-Website-Inquiry---Homepage-Form" name="wf-form-Website-Inquiry---Homepage-Form" data-name="Website Inquiry - Homepage Form" method="get" class="form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email-2">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="field" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
             </form>
             <div class="success-message w-form-done">
