Missed the footer interactions, removed and published

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 08:43:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 19 2021 10:58:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -525,11 +525,11 @@ drift.load('r73nxaxiv89c');
   <div class="footer_section wf-section">
     <div class="main_container">
       <div class="_4_block_row_footer">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block_center">
+        <div class="_4_block_center">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block_center">
+        <div class="_4_block_center">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
@@ -568,7 +568,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block_center">
+        <div class="_4_block_center">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_hours_block">
             <ul role="list" class="list w-list-unstyled">
@@ -591,7 +591,7 @@ drift.load('r73nxaxiv89c');
             </ul>
           </div>
         </div>
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block_center">
+        <div class="_4_block_center">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
